# libninja

./: .env.example  .gitignore  Cargo.toml  Justfile  README.md  flake.nix
.github/workflows/: release.yaml  test.yaml
codegen_rust/: Cargo.toml
codegen_rust/src/: client.rs  example.rs  extras.rs  lib.rs  model.rs  request.rs
codegen_rust/src/serde/: mod.rs  option_i64_null_as_zero.rs
core/: Cargo.toml  Justfile
core/src/: child_schemas.rs  extractor.rs  fs.rs  hir.rs  lang.rs  lib.rs  mir.rs  mir2.rs  options.rs  sanitize.rs  template.rs  util.rs
core/src/extractor/: operation.rs  pet_tag.yaml  record.rs  resolution.rs  ty.rs
core/src/mir/: function.rs
core/template/base/: README.md.j2
core/template/rust/: CODE_OF_CONDUCT.md  Cargo.toml.j2  README.md.j2
core/template/rust/src/: lib.rs  model.rs  request.rs  serde.rs
core/tests/: test_extractor.rs
data/openapi-spec/lob/: 1.5.0.yaml
data/openapi-spec/lob/resources/addresses/: .addresses.yml.swp  address.yml  addresses.yml
data/openapi-spec/lob/resources/bank_accounts/: bank_account.yml  bank_account_verify.yml  bank_accounts.yml
data/openapi-spec/lob/resources/billing_groups/: billing_group.yml  billing_groups.yml
data/openapi-spec/lob/resources/bulk_intl_verifications/: bulk_intl_verifications.yml
data/openapi-spec/lob/resources/bulk_us_verifications/: bulk_us_verifications.yml
data/openapi-spec/lob/resources/cards/: card.yml  cards.yml
data/openapi-spec/lob/resources/checks/: check.yml  checks.yml
data/openapi-spec/lob/resources/intl_autocompletions/: intl_autocompletions.yml
data/openapi-spec/lob/resources/intl_verifications/: intl_verifications.yml
data/openapi-spec/lob/resources/letters/: letter.yml  letters.yml
data/openapi-spec/lob/resources/postcards/: postcard.yml  postcards.yml
data/openapi-spec/lob/resources/reverse_geocode_lookups/: reverse_geocode_lookups.yml
data/openapi-spec/lob/resources/self_mailers/: self_mailer.yml  self_mailers.yml
data/openapi-spec/lob/resources/templates/: template.yml  templates.yml
data/openapi-spec/lob/resources/us_autocompletions/: us_autocompletions.yml
data/openapi-spec/lob/resources/us_verifications/: us_verifications.yml
data/openapi-spec/lob/resources/zip_lookups/: zip_lookups.yml
data/openapi-spec/lob/shared/attributes/: billing_group_id.yml  count.yml  country_extended.yml  country_short.yml  deleted.yml  engine.yml  expected_delivery_date.yml  failure_status_code.yml  html_string.yml  local_file_path.yml  mail_type.yml  object.yml  remote_file_url.yml  resource_description.yml  send_date.yml  signed_link.yml  timestamps.yml
data/openapi-spec/lob/shared/headers/: ratelimit.yml
data/openapi-spec/lob/shared/models/: date_filter.yml  error.yml  list.yml  lob_base.yml  merge_variables.yml  metadata.yml  thumbnail.yml  zip5.yml
data/openapi-spec/lob/shared/parameters/: before_after.yml  date_created.yml  date_modified.yml  idempotency.yml  include.yml  lang_spec.yml  limit.yml  mail_type.yml  metadata.yml  offset.yml  scheduled.yml  send_date.yml  sort_by.yml
data/openapi-spec/plaid/: 2020-09-14.yaml
data/openapi-spec/smartsheet/: 2020-02-16.yaml
data/openapi-spec/stripe/: 2020-08-27.yaml
data/openapi-spec/twilio/1.27/: twilio_autopilot_v1.yaml  twilio_supersim_v1.yaml  twilio_wireless_v1.yaml
hir/: Cargo.toml
hir/src/: config.rs  doc.rs  lang.rs  lib.rs  macro.rs  operation.rs
libninja/: Cargo.toml  Justfile
libninja/examples/: petstore-server.rs
libninja/script/: create.sh  push.sh
libninja/src/: command.rs  commercial.rs  custom.rs  extractor.rs  fs.rs  lang.rs  lib.rs  main.rs  modify.rs  repo.rs  rust.rs  util.rs
libninja/src/command/: generate.rs  init.rs  meta.rs  mod.rs  resolve.rs
libninja/src/extractor/: mod.rs  operation.rs  record.rs  resolution.rs  ty.rs
libninja/src/rust/: cargo_toml.rs  client.rs  codegen.rs  format.rs  io.rs  lower_hir.rs  lower_mir.rs  mir.rs  mod.rs  model.rs  request.rs  serde.rs
libninja/src/rust/codegen/: example.rs  ident.rs  ty.rs  typ.rs
libninja/template/base/: README.md.j2
libninja/template/rust/: Cargo.toml.j2  Justfile
libninja/template/rust/.github/workflows/: ci.yaml
libninja/template/rust/src/: lib.rs
libninja/tests/: integration.rs  syn-api.rs  test_example_gen.rs
libninja/tests/all_of/: main.rs  restriction_bacs.rs  restriction_bacs.yaml  transaction.rs  transaction.yaml
libninja/tests/basic/: link_create_token.rs  main.rs
libninja/tests/files/: plaid_processor.yaml  plaid_watchlist_expected.rs
libninja/tests/integration/basic/: link_create_token.rs  main.rs
libninja/tests/integration/full_lifecycle/: main.rs  postman.yaml
libninja/tests/plaid_processor/: expected.rs
libninja/tests/regression/: link_token_create.rs  link_token_create.yaml  main.rs
libninja/tests/simplify_mir/: main.rs  simplify_mir.yaml
libninja/tests/spec/: keywords.yaml  recurly.yaml
libninja/tests/static/: plaid_processor_expected.rs  plaid_watchlist.yaml  plaid_watchlist_expected.rs
macro/: Cargo.toml  Justfile
macro/src/: body.rs  function.rs  lib.rs  rfunction.rs
macro/tests/: body.rs  function.rs  rfunction.rs  test_only_need_single_braces.rs
mir/: Cargo.toml
mir/src/: class.rs  doc.rs  enum.rs  file.rs  function.rs  ident.rs  import.rs  interface.rs  lib.rs  literal.rs  macro.rs  newtype.rs  parameter.rs  ty.rs  visibility.rs
mir_rust/: Cargo.toml  Justfile
mir_rust/src/: class.rs  enum.rs  example.rs  file.rs  function.rs  ident.rs  import.rs  lib.rs  record.rs  ty.rs  util.rs
mir_rust/src/file/: client.rs  mod.rs
mir_rust/src/file/serde/: mod.rs  null_as_zero.rs  option_chrono_naive_date_as_int.rs  option_i64_str.rs
mir_rust/tests/: main.rs
mir_rust/tests/static/: struct_newtype.rs  struct_sumtype_empty_derive.rs  struct_sumtype_nonempty_derive.rs
model/: Cargo.toml
model/src/: function.rs  macro.rs
src/: lib.rs  main.rs  util.rs
src/codegen/: client.rs  format.rs  mod.rs  model.rs  util.rs
src/codegen/template/: lib.rs  mod.rs
src/handwritten/: mod.rs
template/: lib.rs
test_specs/: basic.yaml  deepl.yaml
(+227 files in other folders)
