[package]
name = "openapi-client-generator"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "Generates a client library based on an OpenAPI spec."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "openapi-client-generator"

[dependencies]
anyhow = "1.0.53"
log = "0.4.14"
proc-macro2 = "1.0.36"
quote = "1.0.15"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.23"
syn = "1.0.86"
tokio = { version = "1.17.0", features = ["full"] }
openapiv3 = { package = "openapiv3-extended", version = "1.0.4" }
convert_case = "0.5.0"
prettyplease = "0.1.7"
clap = "=3.1"

# Use for local development
#[patch.crates-io]
#openapiv3-extended = { path = "../openapiv3" }
