[package]
name = "libninja_codegen_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "codegen_rust"
path = "src/lib.rs"

[dependencies]
libninja_mir.workspace = true
libninja_macro.workspace = true
libninja_hir.workspace = true
libninja_mir_rust.workspace = true
anyhow.workspace = true
quote.workspace = true
proc-macro2.workspace = true
convert_case.workspace = true
regex.workspace = true
walkdir = "2.5.0"
kurtbuilds_std_ext = "0.1.1"
