[package]
name = "ln-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.4", features = ["derive"] }
convert_case = "0.6.0"
openapiv3-extended = "2.0.2"
serde = { version = "1.0.152", features = ["derive"] }
quote = "1.0.23"
serde_json = "1.0.91"
proc-macro2 = "1.0.50"
tracing-ez = "0.3.0"
indexmap = "1.9.2"
syn = "1.0.107"
ln-mir = { path = "../mir" }
include_dir = "0.7.3"
tera = "1.17.1"
