[package]
name = "ln-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
convert_case = "0.6.0"
openapiv3-extended = "2.2.1"
serde = { version = "1.0.164", features = ["derive"] }
quote = "1.0.28"
serde_json = "1.0.99"
proc-macro2 = "1.0.63"
tracing-ez = "0.3.0"
indexmap = "1.9.3"
syn = "1.0.109"
ln-mir = { path = "../mir" }
include_dir = "0.7.3"
tera = "1.19.0"
