[package]
name = "libninja_hir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hir"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
convert_case = "0.6.0"
serde_json = "1.0.108"
openapiv3-extended = "4"
clap = { version = "4.4.10", features = ["derive"] }
