[package]
name = "libninja_hir"
version = "0.1.0"
edition = "2021"
description = "high level ir for libninja"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hir"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
convert_case = "0.6.0"
serde_json = "1.0.108"
openapiv3-extended = "6.0.0"
clap = { version = "4.5", features = ["derive"] }
libninja_mir = { path = "../mir" }
