[package]
name = "libninja_hir"
version = "0.1.0"
edition = "2021"
description = "high level ir for libninja"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hir"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
convert_case.workspace = true
serde_json.workspace = true
openapiv3-extended.workspace = true
clap.workspace = true
libninja_mir.workspace = true
