[package]
name = "libninja"
version = "0.1.10"
edition = "2021"
license = "MIT"
description = "Command line tool for OpenAPI client generation."
publish = false
default-run = "libninja"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
commercial = ["libninja_commercial"]

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
log = "0.4.19"
proc-macro2 = "1.0.63"
quote = "1.0.29"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
serde_yaml = "0.9.22"
syn = "2.0"
tokio = { version = "1.29.1", features = ["full"] }
openapiv3-extended = { version = "3.1", features = ["v2"] }
convert_case = "0.6.0"
prettyplease = "0.2"
clap = { version = "4.4.10", features = ["derive"] }
tera = "1.19.0"
include_dir = "0.7.3"
regex = "1.9.0"
indoc = "2.0.2"
cargo_toml = { git = "https://github.com/kurtbuilds/cargo_toml" }
toml = "0.8.8"
topo_sort = "0.4.0"
url = "2.4.0"
http = "0.2.9"
strum = "0.25"
actix-web = { version = "4.3.1", optional = true }
semver = "1.0.17"
indexmap = "2.0"
libninja_macro = { path = "../macro" }
libninja_core = { path = "../core" }
libninja_mir = { path = "../mir" }
libninja_hir = { path = "../hir" }
libninja_commercial = { path = "../commercial", optional = true }
ignore = "0.4.21"
text_io = "0.1.12"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"

[dev-dependencies]
env_logger = "0.10.0"
pretty_assertions = "1.3.0"
tempfile = "3.6.0"
