[package]
name = "libninja"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Command line tool for OpenAPI client generation."
publish = true
default-run = "libninja"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libninja_hir.workspace = true
libninja_mir_rust.workspace = true
libninja_codegen_rust.workspace = true
libninja_mir.workspace = true
ignore = "0.4.21"
anyhow = { version = "1.0.71", features = ["backtrace"] }
log = "0.4.19"
proc-macro2.workspace = true
quote.workspace = true
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
serde_yaml = "0.9.22"
syn.workspace = true
tokio = { version = "1.29.1", features = ["full"] }
openapiv3-extended.workspace = true
convert_case.workspace = true
prettyplease = "0.2"
clap = { version = "4.5", features = ["derive"] }
regex = "1.9.0"
indoc = "2.0.2"
topo_sort = "0.4.0"
url = "2.4.0"
http = "1.0.0"
strum = "0.26.1"
semver = "1.0.17"
indexmap.workspace = true
text_io = "0.1.12"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
chrono = "0.4.38"
tracing-ez = "0.3.0"

[dev-dependencies]
env_logger = "0.11.2"
pretty_assertions = "1.3.0"
tempfile = "3.6.0"
syn = { version = "2.0", features = ["extra-traits"] }
