[package]
name = "ln-macro"
version = "0.1.0"
authors = [
]
description = "Macros for inline code"
license = "MIT"
edition = "2021"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0.23"
ln-core = { path = "../core" }

[dev-dependencies]
pretty_assertions = "1.3.0"
