[package]
name = "libninja_macro"
version = "0.1.0"
authors = [
]
description = "Macros for inline code"
license = "MIT"
edition = "2021"

[lib]
name = "ln_macro"
proc_macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0.29"
libninja_mir = { path = "../mir" }

[dev-dependencies]
pretty_assertions = "1.3.0"
