[package]
name = "libninja_macro"
version = "0.1.0"
authors = [
]
description = "Macros for inline code"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0.29"
syn = "2.0.77"

[dev-dependencies]
pretty_assertions = "1.3.0"
libninja_mir = { path = "../mir" }
