[package]
name = "libninja_mir_rust"
version = "0.1.0"
edition = "2021"
description = "Library to transform libninja MIR into Rust code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mir_rust"
path = "src/lib.rs"

[dependencies]
libninja_mir.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
convert_case.workspace = true
regex.workspace = true
prettyplease = "0.2.16"
libninja_hir.workspace = true

[dev-dependencies]
pretty_assertions = "1.4.1"
